# data-analysis-app

./: .env  .gitignore  Cargo.toml  Dockerfile  data.csv  docker-compose.yml
.github/workflows/: prod.yml
ai-analyser/: package-lock.json  package.json
ai-analyser/src/: App.js
src/: main.rs
